<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="UserModel"
            type="com.example.githubfinder.models.UsersModel" />

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            android:clipToPadding="false"
            app:cardCornerRadius="15dp"
            app:contentPadding="10dp"
            android:elevation="10dp"
            app:cardElevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <!--            user profile pic-->
                <ImageView
                    android:id="@+id/userProfileImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/Mirage"
                    android:src="@drawable/ic_github_logo"
                    app:layout_constraintEnd_toStartOf="@+id/endingGuideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    bind:userAvatar="@{UserModel.avatarUrl}" />

                <ImageView
                    android:id="@+id/viewProfile"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_profile_click"
                    app:layout_constraintEnd_toEndOf="@id/endingGuideline"
                    app:layout_constraintTop_toTopOf="parent"/>

    <!--            starting guideline-->
                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/startingGuideline"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="0dp" />

    <!--            badges list-->
                <LinearLayout
                    android:id="@+id/linear_badges"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="7dp"
                    app:layout_constraintTop_toBottomOf="@id/userProfileImage"
                    app:layout_constraintStart_toEndOf="@id/startingGuideline"
                    app:layout_constraintEnd_toEndOf="@id/endingGuideline">

    <!--                1st row-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="horizontal">

    <!--            public repos count-->
                        <LinearLayout
                            android:id="@+id/linear_public_repos_count"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/dodger_blue_back"
                            android:orientation="horizontal"
                            android:padding="5dp"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/public_repos_txt"
                                android:textSize="12sp"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/publicReposCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{String.valueOf(UserModel.publicRepos)}"
                                android:textSize="12sp"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                        </LinearLayout>

    <!--            public gists count-->
                        <LinearLayout
                            android:id="@+id/linear_public_gists_count"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/raven_back"
                            android:orientation="horizontal"
                            android:padding="5dp"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/public_gists_txt"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/publicGistsCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{String.valueOf(UserModel.publicGists)}"
                                android:textSize="12sp"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

    <!--                2nd row-->
                    <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="7dp"
                    android:orientation="horizontal">

    <!--            public followers count-->
                    <LinearLayout
                        android:id="@+id/linear_public_followers_count"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/forest_green_back"
                        android:orientation="horizontal"
                        android:padding="5dp"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/followers_txt"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/publicFollowersCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{String.valueOf(UserModel.followers)}"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                    </LinearLayout>

    <!--            public following count-->
                    <LinearLayout
                        android:id="@+id/linear_public_following_count"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/dodger_blue_back"
                        android:orientation="horizontal"
                        android:padding="5dp"
                        android:gravity="center"
                        app:layout_constraintStart_toEndOf="@id/linear_public_followers_count"
                        app:layout_constraintTop_toBottomOf="@+id/linear_public_gists_count"
                        app:layout_constraintEnd_toEndOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/following_txt"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/publicFollowingCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{String.valueOf(UserModel.following)}"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                </LinearLayout>

    <!--            user info list-->
                <LinearLayout
                    android:id="@+id/linear_user_info_list"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="7dp"
                    android:padding="5dp"
                    android:orientation="vertical"
                    android:background="@drawable/bordered_back"
                    app:layout_constraintStart_toEndOf="@id/startingGuideline"
                    app:layout_constraintTop_toBottomOf="@id/linear_badges"
                    app:layout_constraintEnd_toEndOf="@id/endingGuideline">

    <!--                username-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            android:text="@string/username_txt"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/userName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            android:text="@{UserModel.login}"
                            android:textColor="@color/black"/>

                    </LinearLayout>

    <!--                divider-->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/colorPrimary" />

    <!--                company-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            android:text="@string/company_txt"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/companyName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            android:text="@{UserModel.company}"
                            android:textColor="@color/black"/>

                    </LinearLayout>

    <!--                divider-->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/colorPrimary" />

    <!--                website/blog-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            android:text="@string/website_blog_txt"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/websiteBlogAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            android:text="@{UserModel.blog}"
                            android:textColor="@color/black"/>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider" />

                    </LinearLayout>

    <!--                divider-->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/colorPrimary" />

    <!--                location-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            android:text="@string/location_txt"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/userLocation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            android:text="@{UserModel.location}"
                            android:textColor="@color/black"/>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider" />

                    </LinearLayout>

    <!--                divider-->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/colorPrimary" />

    <!--                member since-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            android:text="@string/member_since_txt"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/memberSince"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            android:text="@{UserModel.createdAt}"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                </LinearLayout>

    <!--            progress bar-->
                <com.github.ybq.android.spinkit.SpinKitView
                    android:id="@+id/spin_kit"
                    style="@style/SpinKitView.Large.DoubleBounce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:SpinKit_Color="@color/Mirage"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

    <!--            ending guideline-->
                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/endingGuideline"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</layout>